# netra-confluence-mcp

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  exceptions.py  main.py  manifest.yml.template  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker.yml
confluence/: api.py  client.py
confluence/adf/: differ.py  inspector.py  replacer.py  validator.py  walker.py
confluence/export/: assets.py  fetcher.py  pdf.py  print.css  resolver.py  store.py
confluence/tools/: clone_report.py  create_page.py  export_pdf.py  inspect_jql.py  shared.py  update_macros.py  update_release.py
docker/: Dockerfile  entrypoint.sh
models/: adf.py  config.py  confluence.py  export.py  types.py
scratch/: spike_export.py
scripts/: cf-copy-env.sh  cf-deploy.sh  docker-build-local.sh
tests/: conftest.py  test_api.py  test_client.py  test_clone_report.py  test_config.py  test_create_page.py  test_differ.py  test_export_assets.py  test_export_fetcher.py  test_export_pdf.py  test_export_pdf_tool.py  test_export_resolver.py  test_export_store.py  test_inspect_jql_tool.py  test_inspector.py  test_integration.py  test_replacer.py  test_server.py  test_shared.py  test_update_macros_tool.py  test_update_release.py  test_validator.py  test_walker.py
tests/fixtures/: export_view_golden.html  sample_adf.json
