[project]
name = "netra-confluence-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "selectolax>=0.3",
    "structlog>=24.0",
    "tenacity>=8.3",
    "weasyprint>=62",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pypdf>=6.14.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["integration: marks tests requiring a live Confluence page (deselect with '-m not integration')"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "weasyprint"
ignore_missing_imports = true
